--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@ layout: default
 ---
 
 <div class="home">
+    <h1 class="page-heading"> About Me </h1>
 
-    <p class="autobio">
-        I am a M.S. student in Mechanical Engineering at Stanford University. I obtained my B.S. in Electrical Engineering and Computer Science 
-    at the University of California, Berkeley.
-    </p>
+    <!-- row 1 educational background -->
+    <div class="row">
+        <div class="col-md-4 profile-pic">
+            <img src="images/profile-pic.jpg" atl="profile picture">
+        </div>
+
+        <div class="col-md-8">
+            <p class="about-me">
+                I am currently a M.S. student in Mechanical Engineering at Stanford University. I obtained my B.S. in Electrical Engineering and Computer Science 
+            at the University of California, Berkeley.
+            </p>
+        </div>
+    </div> <!-- row 1 -->
+
+    <div class="row">
+        <div class="col-md-8">
+            <p class="about-interest">
+               My focus in undergraduate was on mechatronics design. Some projects I have worked on include autonomous racing car, 
+            IR pulse oximeter and an inertial measurement system. Most of the <a href="{{ "/projects.html" | prepend: site.baseurl }}"> other projects</a> I've worked on come from fun weekends
+            in hackathons with friends.
+            </p>
+        </div>
+        <div class="col-md-4">
+            <img src="images/NATCAR.jpg" atl="image of NATCAR project">
+        </div>
+    </div> <!-- row 2 -->
 
 </div>
