added projects page and EE192 page

--- a/index.html
+++ b/index.html
@@ -19,16 +19,35 @@ layout: default
         </div>
     </div> <!-- row 1 -->
 
+    <!-- row 2 projects background -->
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-4 col-md-push-8">
+            <img src="images/NATCAR.jpg" atl="image of NATCAR project">
+        </div>
+        <div class="col-md-8 col-md-pull-4">
             <p class="about-interest">
                My focus in undergraduate was on mechatronics design. Some projects I have worked on include autonomous racing car, 
             IR pulse oximeter and an inertial measurement system. Most of the <a href="{{ "/projects.html" | prepend: site.baseurl }}"> other projects</a> I've worked on come from fun weekends
             in hackathons with friends.
             </p>
         </div>
+    </div> <!-- row 2 -->
+
+    <!-- row 3 research interest -->
+    <div class="row">
         <div class="col-md-4">
-            <img src="images/NATCAR.jpg" atl="image of NATCAR project">
+            <img src="images/OmniGrip.png" atl="image of OmniGrip">
+        </div>
+        <div class="col-md-8">
+            <p class="research-interest">
+                My research interest consist on developing the technology and design techniques to advance medical devices. Some topics that I am interested in 
+              (broadly):
+            </p>
+            <ul class="research-int-list">
+                <li> Haptic feedback in robot-assisted minimally invasive surgery (RMIS). </li>
+                <li> Human-robot interactions and multiple-agents collaboration in RMIS. </li>
+                <li> MRI-compatible tools/robots. </li>
+            </ul>
         </div>
     </div> <!-- row 2 -->
 
