fixing url for NATCAR image

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@ layout: default
                     <div class="col-md-6 col-xs-12 profile-col">
                         <div class="ih-item square colored effect6 from_top_and_bottom profile-cell">
                             <a href="{{ "/projects/mechlab.html" | prepend: site.baseurl }}">
-                                <div class="img"><img src="{{ "/images/projects/NATCAR.jpg" | prepend: site.baseurl }}" alt="NATCAR image"></div>
+                                <div class="img"><img src="{{ "/images/projects/NATCAR/NATCAR.jpg" | prepend: site.baseurl }}" alt="NATCAR image"></div>
                                 <div class="info">
                                     <h3> Mechatronics Design Lab</h3>
                                     <p> Team So Good. Won the 2015 NATCAR competition at UC Davis. Averaged 9.06 feet/s. </p>
@@ -22,7 +22,7 @@ layout: default
                     </div>
                     <div class="col-md-6 col-xs-12 profile-col">
                         <div class="ih-item square colored effect6 from_top_and_bottom profile-cell">
-                            <a href="pulseox.html">
+                            <a href="{{ "/projects/bioinst.html" | prepend: site.baseurl }}">
                                 <div class="img"><img src="{{ "/images/projects/PulseOx/pulse_ox.jpg" | prepend: site.baseurl }}" alt="Pulse Oximeter image"></div>
                                 <div class="info">
                                     <h3> Bio Instrumentation Lab</h3>
