--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@ layout: default
                     <div class="col-md-6 col-xs-12">
                         <div class="ih-item square colored effect6 from_top_and_bottom project-cell">
                             <a href="{{ "/projects/controls.html" | prepend: site.baseurl }}">
-                                <div class="img"><img src="{{ "/images/projects/Controls/InvPendulum.jpeg" | prepend: site.baseurl }}" alt="Inverted Pendulum image"></div>
+                                <div class="img"><img src="{{ "/images/projects/Controls/InvPendulum.jpg" | prepend: site.baseurl }}" alt="Inverted Pendulum image"></div>
                                 <div class="info">
                                     <h3> Feedback Control </h3>
                                     <p> Lab projects on magnetic levitation and inverted pendulum. </p>
