--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
         <div class="col-md-8 col-md-pull-4">
             <p class="about-interest">
                My focus in undergraduate was on mechatronics design. Some projects I have worked on include autonomous racing car, 
-            IR pulse oximeter and an inertial measurement system. Most of the <a href="{{ "/projects.html" | prepend: site.baseurl }}"> other projects</a> I've worked on come from fun weekends
+            IR pulse oximeter and an inertial measurement system. Most of the <a href="{{ "/projects.html/#hackathons" | prepend: site.baseurl }}"> other projects</a> I've worked on come from fun weekends
             in hackathons with friends.
             </p>
         </div>
