updating index.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ layout: default
         <div class="col-md-8 col-md-pull-4">
             <p class="about-interest">
                My focus in undergraduate was on mechatronics design. Some projects I have worked on include autonomous racing car, 
-            IR pulse oximeter and an inertial measurement system. Most of the <a href="{{ "/projects.html/#hackathons" | prepend: site.baseurl }}"> other projects</a> I've worked on come from fun weekends
-            in hackathons with friends.
+            IR pulse oximeter and some other fun school projects. Most of the <a href="{{ "/projects.html/#hackathons" | prepend: site.baseurl }}"> other projects</a> I've worked on come from going to hackathons with friends.
             </p>
         </div>
     </div> <!-- row 2 -->
