updated hackathon projects

--- a/projects.html
+++ b/projects.html
@@ -60,6 +60,34 @@ layout: default
             <div class="row">
                 <div class="col-md-6 col-xs-12">
                     <div class="ih-item square colored effect6 from_top_and_bottom project-cell">
+                        <a href="{{ "/projects/LAHacks.html" | prepend: site.baseurl }}">
+                            <div class="img"><img src="{{ "/images/projects/LAHacks/lahacksmain.jpg" | prepend: site.baseurl }}" alt="UCLA Hackathon image"></div>
+                            <div class="info">
+                                <h3> LAHacks </h3>
+                                <p> Hackathon at UCLA</p>
+                                <p> Spring 2014 </p>
+                            </div> <!-- info -->
+                        </a>
+                    </div> <!-- effect type -->
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <div class="ih-item square colored effect6 from_top_and_bottom project-cell">
+                        <a href="{{ "/projects/HackGT.html" | prepend: site.baseurl }}">
+                            <div class="img"><img src="{{ "/images/projects/HackGT/hackgtmain.jpg" | prepend: site.baseurl }}" alt="HackGT project image"></div>
+                            <div class="info">
+                                <h3> HackGT</h3>
+                                <p> Hackathon at Georgia Tech </p>
+                                <p> Fall 2014 </p>
+                            </div> <!-- info -->
+                        </a>
+                    </div> <!-- effect type -->
+                </div>
+            </div>
+            <!-- End of row 1-->
+            <!-- row 2-->
+            <div class="row">
+                <div class="col-md-6 col-xs-12">
+                    <div class="ih-item square colored effect6 from_top_and_bottom project-cell">
                         <a href="{{ "/projects/chainreact.html" | prepend: site.baseurl }}">
                             <div class="img"><img src="{{ "/images/projects/ChainReact/ChainReact.jpg" | prepend: site.baseurl }}" alt="Chain Reaction project image"></div>
                             <div class="info">
@@ -82,7 +110,7 @@ layout: default
                     </div> <!-- effect type -->
                 </div>
             </div>
-            <!-- End of row 1-->
+            <!-- End of row 2-->
             
         </div> <!-- end project-list -->
 </div> <!-- projects -->
