adding hackgt page

--- a/projects.html
+++ b/projects.html
@@ -60,19 +60,19 @@ layout: default
             <div class="row">
                 <div class="col-md-6 col-xs-12">
                     <div class="ih-item square colored effect6 from_top_and_bottom project-cell">
-                        <a href="{{ "/projects/LAHacks.html" | prepend: site.baseurl }}">
+                        <a href="{{ "/projects/lahacks.html" | prepend: site.baseurl }}">
                             <div class="img"><img src="{{ "/images/projects/LAHacks/lahacksmain.jpg" | prepend: site.baseurl }}" alt="UCLA Hackathon image"></div>
                             <div class="info">
                                 <h3> LAHacks </h3>
                                 <p> Hackathon at UCLA</p>
-                                <p> Spring 2014 </p>
+                                <p> Spring 2015 </p>
                             </div> <!-- info -->
                         </a>
                     </div> <!-- effect type -->
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <div class="ih-item square colored effect6 from_top_and_bottom project-cell">
-                        <a href="{{ "/projects/HackGT.html" | prepend: site.baseurl }}">
+                        <a href="{{ "/projects/hackgt.html" | prepend: site.baseurl }}">
                             <div class="img"><img src="{{ "/images/projects/HackGT/hackgtmain.jpg" | prepend: site.baseurl }}" alt="HackGT project image"></div>
                             <div class="info">
                                 <h3> HackGT</h3>
@@ -99,7 +99,7 @@ layout: default
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <div class="ih-item square colored effect6 from_top_and_bottom project-cell">
-                        <a href="{{ "/projects/IEEEHackathon.html" | prepend: site.baseurl }}">
+                        <a href="{{ "/projects/ieeehackathon.html" | prepend: site.baseurl }}">
                             <div class="img"><img src="{{ "/images/projects/IEEEHack/IEEEHack.jpg" | prepend: site.baseurl }}" alt="IEEE Hackathon image"></div>
                             <div class="info">
                                 <h3> IEEE Hackathon </h3>
