adding la hacks

--- a/projects/hackgt.html
+++ b/projects/hackgt.html
@@ -11,12 +11,12 @@ layout: default
     <h1 class="page-heading">Hackathon at Georgia Tech</h1>
     <h2 class="team-members"> Michael Lin and Alexa Siu </h2>
     <h2 class="project-info"> Georgia Tech, Fall 2014 </h2>
-    <p> We were very interested in haptic technology so we decided to build a wearable haptic glove. Our goal was to give haptic feedback through vibrations to the users and all them to feel a virtual world and interact with it.
+    <p> We were very interested in haptic technology so we decided to build a wearable haptic glove. Our goal was to give haptic feedback through vibrations to the users and all them to feel a virtual world and interact with it. This is <a target="_blank" href="http://devpost.com/software/hapmotu"> the website </a> we submitted for the competition.
     </p>
     <p> Since we were limited by time and money we got some $10 phones from Walmart and took their vibration motors. </p>
     <img class="project-image center-block" src="{{ "/images/projects/HackGT/vibromotor.jpg" | prepend: site.baseurl }}">
 
-    <p> We were also fortunate that HackGT staff lent us a SparkIO! I've never used one before but it was really easy and fun to use. SparkIO is basically a microcontroller with a wifi module wrapped with a very well made API that lets you give your projects the IoT spin. (This startup is actually pretty well now <a href="https://store.particle.io/"> link </a>).
+    <p> We were also fortunate that HackGT staff lent us a SparkIO! I've never used one before but it was really easy and fun to use. SparkIO is basically a microcontroller with a wifi module wrapped with a very well made API that lets you give your projects the IoT spin. (This startup is actually pretty well now <a target="_blank" href="https://store.particle.io/"> link </a>).
     <img class="project-image center-block" src="{{ "/images/projects/HackGT/sparkio.jpg" | prepend: site.baseurl }}">
 
     <p> Another cool piece of hardware that we used was a LEAP Motion sensor. These sensor allowed us to track the position of the user's finger tips in real time. This way we could map the virtual world to the 3D space surrounding the users hand and provide feedback to the user based on fingers positions. </p>
