adding stanford project

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,26 @@ layout: default
 <div class="projects">
 
     <h1 class="page-heading">Projects</h1>
+    <h2 class="project-category" id="hackathons">@Stanford (2015-Present)</h2>
+        <div id="project-list">
+            <!-- row 1-->
+            <div class="row">
+                <div class="col-md-6 col-xs-12">
+                    <div class="ih-item square colored effect6 from_top_and_bottom project-cell">
+                        <!--<a href="{{ "/projects/218a.html" | prepend: site.baseurl }}">-->
+                        <a target="_blank" href="http://stopthedamleak.weebly.com/">
+                            <div class="img"><img src="{{ "/images/projects/ME218A/stopthedamleak.jpg" | prepend: site.baseurl }}" alt="ME218A final project image"></div>
+                            <div class="info">
+                                <h3> ME 218A: Smart Product Design Fundamentals </h3>
+                                <p> Fall 2015 </p>
+                            </div> <!-- info -->
+                        </a>
+                    </div> <!-- effect type -->
+                </div>
+            </div>
+            <!-- End of row 1-->
+        </div> <!-- end project-list -->
+
     <h2 class="project-category" id="hackathons">@Hackathons</h2>
         <div id="project-list">
             <!-- row 1-->
