fixing errors in LAHacks

--- a/projects/lahacks.html
+++ b/projects/lahacks.html
@@ -22,6 +22,12 @@ layout: default
     
     <p> One of the hardests things in our project was to find small vibration motors that would fit comfortable on a glove. We found out that there was a repair store nearby that sold replacement vibration motors for iPhones so we used that. </p>
     <img class="project-image center-block" src="{{ "/images/projects/LAHacks/wiringvibmotors.jpg" | prepend: site.baseurl }}">
+    
+    <p> The hardest part was to sew everything on a glove. Wearable tech is hard to make! (Kevin on the pic). </p>
+    <img class="project-image center-block" src="{{ "/images/projects/LAHacks/sewing.jpg" | prepend: site.baseurl }}">
+
+    <p> LEDs! </p>
+    <img class="project-image center-block" src="{{ "/images/projects/LAHacks/leds.jpg" | prepend: site.baseurl }}">
 
     <p> We soldered a custom motor controller and used an Arduino ATMega to control them </p>
     <img class="project-image center-block" src="{{ "/images/projects/LAHacks/thehand.jpg" | prepend: site.baseurl }}">
